# AQI_notifier

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  lambda.Dockerfile  lambda_function.py  pyproject.toml
aqi_notifier/: __init__.py  __main__.py  aqi.py  notify.py
tests/: test_aqi_notifier.py
tests/fixtures/vcr_cassettes/: test_fetch_aqi_calgary.yaml  test_fetch_aqi_padova.yaml  test_get_sensor_data.yaml
